# sage

./: .cvsignore  .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  autogen.sh  build_sage.pl  build_sage_glx.pl  build_sage_wgl.pl  configure.ac  configure.in  sage.pc.in  sage.spec.in
Sage.pbproj/: project.pbxproj
man/man3/: Makefile.am  sage.3  sage_init.3
sage/: .cvsignore  .gitignore  GL.h  GLU.h  GLU_EXT_nurbs_tessellator.c  GLU_EXT_nurbs_tessellator.h  GLU_EXT_object_space_tess.c  GLU_EXT_object_space_tess.h  GLX_ARB_get_proc_address.c  GLX_ARB_get_proc_address.h  GLX_EXT_import_context.c  GLX_EXT_import_context.h  GLX_EXT_visual_info.c  GLX_EXT_visual_info.h  GLX_EXT_visual_rating.c  GLX_EXT_visual_rating.h  GL_3DFX_multisample.c  GL_3DFX_multisample.h  GL_3DFX_tbuffer.c  GL_3DFX_tbuffer.h  GL_3DFX_texture_compression_FXT1.c  GL_3DFX_texture_compression_FXT1.h  GL_APPLE_client_storage.c  GL_APPLE_client_storage.h  GL_APPLE_element_array.c  GL_APPLE_element_array.h  GL_APPLE_fence.c  GL_APPLE_fence.h  GL_APPLE_specular_vector.c  GL_APPLE_specular_vector.h  GL_APPLE_transform_hint.c  GL_APPLE_transform_hint.h  GL_APPLE_vertex_array_object.c  GL_APPLE_vertex_array_object.h  GL_APPLE_vertex_array_range.c  GL_APPLE_vertex_array_range.h  GL_APPLE_ycbcr_422.c  GL_APPLE_ycbcr_422.h  GL_ARB_depth_texture.c  GL_ARB_depth_texture.h  (+227 more)
templates/: Makefile.am  header  license
