dnl Initialise autoconf

AC_INIT()
AM_CONFIG_HEADER(config.h)

dnl Detect the canonical host and target build environment
AC_CANONICAL_HOST
AC_CANONICAL_TARGET

dnl Initialise automake
SAGE_MAJOR_VERSION=0
SAGE_MINOR_VERSION=1
SAGE_MICRO_VERSION=0
SAGE_VERSION=$SAGE_MAJOR_VERSION.$SAGE_MINOR_VERSION.$SAGE_MICRO_VERSION

AC_SUBST(SAGE_VERSION)

SAGE_CURRENT=0
SAGE_REVISION=1
SAGE_AGE=0
SAGE_VERSION_INFO=$SAGE_CURRENT:$SAGE_REVISION:$SAGE_AGE

AC_SUBST(SAGE_VERSION_INFO)

SAGE_REQUIRES=""

AM_INIT_AUTOMAKE(sage, $SAGE_VERSION)

dnl Need libtool
AC_LIBTOOL_WIN32_DLL
AM_PROG_LIBTOOL
AC_PROG_CC
AC_MINGW32
AC_CYGWIN
AC_EXEEXT


if test $cross_compiling == no; then
  CFLAGS="$CFLAGS -I/usr/X11R6/include -Wall"
  LIBS="$LIBS -L/usr/lib -L/usr/X11R6/lib -L/usr/local/lib"
fi


if test "x$CYGWIN" = xyes -o "x$MINGW32" = xyes; then
  SAGE_DLL=sage.dll
  AC_SUBST(SAGE_DLL)
  AC_CHECK_TOOL(DLLWRAP, dllwrap)
  AC_CHECK_TOOL(DLLTOOL, dlltool)
fi
AM_CONDITIONAL(BUILD_DLL, test  "$SAGE_DLL"="sage.dll")

AC_ARG_ENABLE(debug,
  [  --enable-debug	enable debug information [default=no]],
  [
    if test "$enableval" = "yes"; then
      CFLAGS="$CFLAGS -ggdb -O0 -DDEBUG"
    else
      CFLAGS="$CFLAGS -O3 -DNDEBUG"
    fi
  ],[
    CFLAGS="$CFLAGS -O3 -DNDEBUG"
  ]
)

dnl Check SDL
SDL_VERSION=1.2.2
AC_SUBST(SDL_VERSION)
AM_PATH_SDL($SDL_VERSION, [
CFLAGS="$CFLAGS $SDL_CFLAGS"
LIBS="$LIBS $SDL_LIBS"
],
[
  AC_MSG_ERROR(Couldn't find SDL or insufficent version found. Please goto http://www.libsdl.org/ and get at least version $SDL_VERSION)
])


dnl Check other libs
if test $cross_compiling == no; then
  AC_CHECK_LIB(GL,glViewport)
else 
  AC_CHECK_HEADER(GL/gl.h,
	[found_gl=yes break],
	[found_gl=no])
  if test $found_gl == yes; then
	LIBS="$LIBS -lopengl32"
  else
	AC_MSG_ERROR(Error could not find OpenGL)
  fi
fi

AC_CHECK_HEADER(windows.h, [], [])
#AM_CONDITIONAL(BUILD_WGL, test "$ac_cv_header_windows_h" == "yes")
AM_CONDITIONAL(BUILD_WGL, false)

AC_CHECK_HEADER(X11/Xlib.h, [], [])
#AM_CONDITIONAL(BUILD_GLX, test "$ac_cv_header_X11_Xlib_h" == "yes")
AM_CONDITIONAL(BUILD_GLX, false)

SAGE_LIBS="-lsage"
SAGE_CFLAGS=""

AC_SUBST(SAGE_REQUIRES)
AC_SUBST(SAGE_LIBS)
AC_SUBST(SAGE_CFLAGS)

AC_SUBST(PREFIX)


dnl Generate files
AC_OUTPUT([
	Makefile
	sage/Makefile
	templates/Makefile
	sage.spec
	sage.pc
])
